--- a/datasets/testing.ipynb
+++ b/datasets/testing.ipynb
@@ -451,40 +451,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "medianValue                   int64\n",
-      "medianRent                    int64\n",
-      "crime_rate                  float64\n",
-      "parks_pp                    float64\n",
-      "pop_density                 float64\n",
-      "restaurants_pp              float64\n",
-      "nightlife_pp                float64\n",
-      "bars_pp                     float64\n",
-      "international_airport         int64\n",
-      "amtrak                        int64\n",
-      "car_percent                 float64\n",
-      "public_transport_percent    float64\n",
-      "walked_percent              float64\n",
-      "museums_pp                  float64\n",
-      "activities_pp               float64\n",
-      "republican                    int64\n",
-      "democrat                      int64\n",
-      "white_percent               float64\n",
-      "black_percent               float64\n",
-      "asian_percent               float64\n",
-      "two_plus_percent            float64\n",
-      "hispanic_percent            float64\n",
-      "foreign_born_percent        float64\n",
-      "max_avg_high                float64\n",
-      "max_avg_low                 float64\n",
-      "mean_diff                   float64\n",
-      "dtype: object\n"
+     "ename": "NameError",
+     "evalue": "name 'city_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(city_data[metrics]\u001b[38;5;241m.\u001b[39mdtypes)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'city_data' is not defined"
      ]
     }
    ],
@@ -2741,6 +2719,394 @@
     "    sorted_indices = np.argsort(distances)\n",
     "    best_matches = city_data.iloc[sorted_indices]\n",
     "    return best_matches.head(5)  # Top 5 recommendations\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               City_State      score  medianRent\n",
+      "      Fargo, North Dakota 148.271863         992\n",
+      "Sioux Falls, South Dakota 124.620803         986\n",
+      "         Bozeman, Montana 120.947856        1852\n",
+      "     Rochester, Minnesota 110.512000        1446\n",
+      "        Buffalo, New York 102.265345        1066\n",
+      "        Anchorage, Alaska 101.278531        1473\n",
+      "        Cheyenne, Wyoming  99.508480        1141\n",
+      "       Madison, Wisconsin  94.380014        1395\n",
+      "   Minneapolis, Minnesota  92.318180        1448\n",
+      "         Des Moines, Iowa  90.974628        1178\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "# Load data\n",
+    "data = pd.read_csv('algorithmData1.csv')\n",
+    "\n",
+    "# Normalize relevant columns\n",
+    "scaler = MinMaxScaler()\n",
+    "columns_to_normalize = [ 'crime_rate', 'parks_pp', 'pop_density', \n",
+    "    'nonwhite_percent', 'foreign_born_percent', 'restaurants', \n",
+    "    'nightlife', 'transit', 'car_percent', 'activities', \n",
+    "    'republican', 'max_avg_high', 'mean_diff',\n",
+    "    'natural-resources_percent', 'construction_percent', 'manufacturing_percent', \n",
+    "    'sales_percent', 'transportation_percent', 'information_percent', \n",
+    "    'finance_percent', 'scientific_percent', 'education_percent', \n",
+    "    'arts_percent', 'other_percent', 'public-administration_percent'\n",
+    "]\n",
+    "data[columns_to_normalize] = scaler.fit_transform(data[columns_to_normalize])\n",
+    "\n",
+    "# Example user inputs (replace these with dynamic inputs)\n",
+    "user_preferences = {\n",
+    "    'COL': 3000,  # Cost of living preference\n",
+    "    'crime': 4,  # Safety\n",
+    "    'nature': 5,  # Parks\n",
+    "    'urban': 1,  # Urban/rural\n",
+    "    'diverse': 5,  # Diversity\n",
+    "    'dining': 4,  # Dining\n",
+    "    'nightlife': 4,  # Nightlife\n",
+    "    'airports': 3,  # Transit access\n",
+    "    'transportation': 2,  # Driving vs public transit\n",
+    "    'activities': 5,  # Entertainment\n",
+    "    'politics': 5,  # Political preference\n",
+    "    'alignment': 5,  # Political alignment importance\n",
+    "    'climate': 2,  # Hot vs cold\n",
+    "    'seasonal': 3,  # Seasonal changes\n",
+    "    'job-industry': 'education'  # Job industry preference\n",
+    "}\n",
+    "\n",
+    "# Match job industry\n",
+    "data['job_match'] = data[f\"{user_preferences['job-industry']}_percent\"]\n",
+    "\n",
+    "data = data[data['medianRent'] <= user_preferences['COL'] + 400]\n",
+    "# Weight variables based on user inputs\n",
+    "# Calculate weighted score based on user preferences\n",
+    "weather = 0\n",
+    "if user_preferences['climate'] in [1, 2]:\n",
+    "    weather =  (1- data['max_avg_low']) * (6 - user_preferences['climate'] )\n",
+    "elif user_preferences['climate'] in [4,5]:\n",
+    "    weather = data['max_avg_high'] * user_preferences['climate'] \n",
+    "\n",
+    "density = 0\n",
+    "if user_preferences['urban'] in [1, 2]:\n",
+    "    density = (1 - data['pop_density']) * (6 - user_preferences['urban'])  # Prefer lower density\n",
+    "elif user_preferences['urban'] in [3, 4, 5]:\n",
+    "    density = data['pop_density'] * user_preferences['urban']  # Prefer higher density\n",
+    "\n",
+    "data['score'] = (\n",
+    "    data['crime_rate'] * (6 - user_preferences['crime']) +  # Lower crime rate preferred\n",
+    "    data['parks_pp'] * user_preferences['nature'] +        # Nature preference\n",
+    "    density +      # Urban/rural preference\n",
+    "    (data['nonwhite_percent'] + data['foreign_born_percent']) * user_preferences['diverse'] +\n",
+    "    data['restaurants'] * user_preferences['dining'] +\n",
+    "    data['nightlife'] * user_preferences['nightlife'] +\n",
+    "    data['transit'] * user_preferences['airports'] +\n",
+    "    data['car_percent'] * user_preferences['transportation'] +\n",
+    "    data['activities'] * user_preferences['activities'] +\n",
+    "    data['republican'] * user_preferences['politics'] * user_preferences['alignment'] +\n",
+    "    weather +\n",
+    "    data['mean_diff'] * user_preferences['seasonal'] +\n",
+    "    data['job_match'] * 5  # Job match is always maximally weighted\n",
+    ")\n",
+    "\n",
+    "# Normalize the score to range 0-1 for better comparability\n",
+    "\n",
+    "\n",
+    "# Rank cities by score\n",
+    "recommendations = data.sort_values(by='score', ascending=False).head(10)\n",
+    "\n",
+    "# Output recommendations\n",
+    "print(recommendations[['City_State', 'score', 'medianRent']].to_string(index=False))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                City_State      score\n",
+      "21          Miami, Florida  46.752732\n",
+      "85           Austin, Texas  44.748798\n",
+      "40  New Orleans, Louisiana  44.550337\n",
+      "23    Tallahassee, Florida  44.044434\n",
+      "86           Dallas, Texas  43.158885\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "data = pd.read_csv('algorithmData1.csv')\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "columns_to_normalize = [ 'crime_rate', 'parks_pp', 'pop_density', \n",
+    "    'nonwhite_percent', 'foreign_born_percent', 'restaurants', \n",
+    "    'nightlife', 'transit', 'car_percent', 'activities', \n",
+    "    'republican', 'democrat', 'max_avg_high', 'mean_diff',\n",
+    "    'natural-resources_percent', 'construction_percent', 'manufacturing_percent', \n",
+    "    'sales_percent', 'transportation_percent', 'information_percent', \n",
+    "    'finance_percent', 'scientific_percent', 'education_percent', \n",
+    "    'arts_percent', 'other_percent', 'public-administration_percent'\n",
+    "]\n",
+    "data[columns_to_normalize] = scaler.fit_transform(data[columns_to_normalize])\n",
+    "\n",
+    "# User preferences\n",
+    "user_preferences = {\n",
+    "    'COL': 3000,  # Cost of living preference\n",
+    "    'crime': 1,  # Safety\n",
+    "    'nature': 1,  # Parks\n",
+    "    'urban': 4,  # Urban/rural\n",
+    "    'diverse': 5,  # Diversity\n",
+    "    'dining': 4,  # Dining\n",
+    "    'nightlife': 4,  # Nightlife\n",
+    "    'airports': 1,  # Transit access\n",
+    "    'transportation': 2,  # Driving vs public transit\n",
+    "    'activities': 1,  # Entertainment\n",
+    "    'politics': 5,  # Political preference\n",
+    "    'alignment': 5,  # Political alignment importance\n",
+    "    'climate': 5,  # Hot vs cold\n",
+    "    'seasonal': 1,  # Seasonal changes\n",
+    "    'job-industry': 'information'  # Job industry preference\n",
+    "}\n",
+    "\n",
+    "data['score'] = 0\n",
+    "\n",
+    "data['job_match'] = data[f\"{user_preferences['job-industry']}_percent\"]\n",
+    "\n",
+    "data = data[data['medianRent'] <= user_preferences['COL'] + 400]\n",
+    "\n",
+    "weather = 0\n",
+    "if user_preferences['climate'] in [1, 2]:\n",
+    "    weather = (1 - data['max_avg_low']) * (6 - user_preferences['climate'])\n",
+    "elif user_preferences['climate'] in [4, 5]:\n",
+    "    weather = data['max_avg_high'] * user_preferences['climate']\n",
+    "\n",
+    "density = 0\n",
+    "if user_preferences['urban'] in [1, 2]:\n",
+    "    density = (1 - data['pop_density']) * (6 - user_preferences['urban'])  # Prefer lower density\n",
+    "elif user_preferences['urban'] in [4, 5]:\n",
+    "    density = data['pop_density'] * user_preferences['urban']  # Prefer higher density\n",
+    "\n",
+    "politics = 0\n",
+    "if user_preferences['politics'] in [1, 2]:\n",
+    "    politics = data['democrat'] * (6 - user_preferences['politics'])  # Prefer lower density\n",
+    "elif user_preferences['politics'] in [4, 5]:\n",
+    "    politics = data['republican'] * user_preferences['politics']  # Prefer higher density\n",
+    "\n",
+    "data['score'] = (\n",
+    "    (1 - data['crime_rate']) * (6 - user_preferences['crime']) +  # Lower crime rate preferred\n",
+    "    data['parks_pp'] * user_preferences['nature'] +        # Nature preference\n",
+    "    density +                                              # Urban/rural preference\n",
+    "    (data['nonwhite_percent'] + data['foreign_born_percent']) * user_preferences['diverse'] +\n",
+    "    data['restaurants'] * user_preferences['dining'] +\n",
+    "    data['nightlife'] * user_preferences['nightlife'] +\n",
+    "    data['transit'] * user_preferences['airports'] +\n",
+    "    data['car_percent'] * user_preferences['transportation'] +\n",
+    "    data['activities'] * user_preferences['activities'] +\n",
+    "    politics * user_preferences['alignment'] +\n",
+    "    weather +\n",
+    "    data['mean_diff'] * user_preferences['seasonal'] +\n",
+    "    data['job_match'] * 5  # Job match is always maximally weighted\n",
+    ")\n",
+    "\n",
+    "recommendations = data.sort_values(by='score', ascending=False).head(5)\n",
+    "# Output recommendations\n",
+    "print(recommendations[['City_State', 'score']].to_string())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# User preferences\n",
+    "user_preferences = {\n",
+    "    'COL': 3000,  # Cost of living preference\n",
+    "    'crime': 1,  # Safety\n",
+    "    'nature': 1,  # Parks\n",
+    "    'urban': 4,  # Urban/rural\n",
+    "    'diverse': 5,  # Diversity\n",
+    "    'dining': 4,  # Dining\n",
+    "    'nightlife': 4,  # Nightlife\n",
+    "    'airports': 1,  # Transit access\n",
+    "    'transportation': 2,  # Driving vs public transit\n",
+    "    'activities': 1,  # Entertainment\n",
+    "    'politics': 5,  # Political preference\n",
+    "    'alignment': 5,  # Political alignment importance\n",
+    "    'climate': 5,  # Hot vs cold\n",
+    "    'seasonal': 1,  # Seasonal changes\n",
+    "    'job-industry': 'information'  # Job industry preference\n",
+    "}\n",
+    "\n",
+    "def cityReccomender(user_preferences):\n",
+    "    import pandas as pd\n",
+    "    from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "    data = pd.read_csv('algorithmData1.csv')\n",
+    "\n",
+    "    scaler = MinMaxScaler()\n",
+    "    columns_to_normalize = [ 'crime_rate', 'parks_pp', 'pop_density', \n",
+    "        'nonwhite_percent', 'foreign_born_percent', 'restaurants', \n",
+    "        'nightlife', 'transit', 'car_percent', 'activities', \n",
+    "        'republican', 'democrat', 'max_avg_high', 'mean_diff',\n",
+    "        'natural-resources_percent', 'construction_percent', 'manufacturing_percent', \n",
+    "        'sales_percent', 'transportation_percent', 'information_percent', \n",
+    "        'finance_percent', 'scientific_percent', 'education_percent', \n",
+    "        'arts_percent', 'other_percent', 'public-administration_percent'\n",
+    "    ]\n",
+    "    data[columns_to_normalize] = scaler.fit_transform(data[columns_to_normalize])\n",
+    "\n",
+    "\n",
+    "\n",
+    "    data['score'] = 0\n",
+    "\n",
+    "    data['job_match'] = data[f\"{user_preferences['job-industry']}_percent\"]\n",
+    "\n",
+    "    data = data[data['medianRent'] <= user_preferences['COL'] + 400]\n",
+    "\n",
+    "    weather = 0\n",
+    "    if user_preferences['climate'] in [1, 2]:\n",
+    "        weather = (1 - data['max_avg_low']) * (6 - user_preferences['climate'])\n",
+    "    elif user_preferences['climate'] in [4, 5]:\n",
+    "        weather = data['max_avg_high'] * user_preferences['climate']\n",
+    "\n",
+    "    density = 0\n",
+    "    if user_preferences['urban'] in [1, 2]:\n",
+    "        density = (1 - data['pop_density']) * (6 - user_preferences['urban'])  # Prefer lower density\n",
+    "    elif user_preferences['urban'] in [4, 5]:\n",
+    "        density = data['pop_density'] * user_preferences['urban']  # Prefer higher density\n",
+    "\n",
+    "    politics = 0\n",
+    "    if user_preferences['politics'] in [1, 2]:\n",
+    "        politics = data['democrat'] * (6 - user_preferences['politics'])  # Prefer lower density\n",
+    "    elif user_preferences['politics'] in [4, 5]:\n",
+    "        politics = data['republican'] * user_preferences['politics']  # Prefer higher density\n",
+    "\n",
+    "    data['score'] = (\n",
+    "        (1 - data['crime_rate']) * (6 - user_preferences['crime']) +  # Lower crime rate preferred\n",
+    "        data['parks_pp'] * user_preferences['nature'] +        # Nature preference\n",
+    "        density +                                              # Urban/rural preference\n",
+    "        (data['nonwhite_percent'] + data['foreign_born_percent']) * user_preferences['diverse'] +\n",
+    "        data['restaurants'] * user_preferences['dining'] +\n",
+    "        data['nightlife'] * user_preferences['nightlife'] +\n",
+    "        data['transit'] * user_preferences['airports'] +\n",
+    "        data['car_percent'] * user_preferences['transportation'] +\n",
+    "        data['activities'] * user_preferences['activities'] +\n",
+    "        politics * user_preferences['alignment'] +\n",
+    "        weather +\n",
+    "        data['mean_diff'] * user_preferences['seasonal'] +\n",
+    "        data['job_match'] * 5  # Job match is always maximally weighted\n",
+    "    )\n",
+    "\n",
+    "    recommendations = data.sort_values(by='score', ascending=False).head(5)\n",
+    "    # Output recommendations\n",
+    "    return recommendations[['City_State', 'score', 'Latitude', 'Longitude']]\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_State</th>\n",
+       "      <th>score</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Miami, Florida</td>\n",
+       "      <td>46.752732</td>\n",
+       "      <td>25.774173</td>\n",
+       "      <td>-80.193620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>Austin, Texas</td>\n",
+       "      <td>44.748798</td>\n",
+       "      <td>30.271129</td>\n",
+       "      <td>-97.743700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>New Orleans, Louisiana</td>\n",
+       "      <td>44.550337</td>\n",
+       "      <td>29.975998</td>\n",
+       "      <td>-90.078213</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Tallahassee, Florida</td>\n",
+       "      <td>44.044434</td>\n",
+       "      <td>30.438083</td>\n",
+       "      <td>-84.280933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>Dallas, Texas</td>\n",
+       "      <td>43.158885</td>\n",
+       "      <td>32.776272</td>\n",
+       "      <td>-96.796856</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                City_State      score   Latitude  Longitude\n",
+       "21          Miami, Florida  46.752732  25.774173 -80.193620\n",
+       "85           Austin, Texas  44.748798  30.271129 -97.743700\n",
+       "40  New Orleans, Louisiana  44.550337  29.975998 -90.078213\n",
+       "23    Tallahassee, Florida  44.044434  30.438083 -84.280933\n",
+       "86           Dallas, Texas  43.158885  32.776272 -96.796856"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cityReccomender(user_preferences)"
    ]
   },
   {
