--- a/datasets/testing.ipynb
+++ b/datasets/testing.ipynb
@@ -2929,7 +2929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2956,7 +2956,7 @@
     "    import pandas as pd\n",
     "    from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
-    "    data = pd.read_csv('algorithmData1.csv')\n",
+    "    data = pd.read_csv('dataset.csv')\n",
     "\n",
     "    scaler = MinMaxScaler()\n",
     "    columns_to_normalize = [ 'crime_rate', 'parks_pp', 'pop_density', \n",
@@ -3014,14 +3014,14 @@
     "\n",
     "    recommendations = data.sort_values(by='score', ascending=False).head(5)\n",
     "    # Output recommendations\n",
-    "    return recommendations[['City_State', 'score', 'Latitude', 'Longitude']]\n",
+    "    return recommendations[['City_State', 'score', 'Latitude', 'Longitude', 'blurb', 'image', 'bullets']]\n",
     "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -3049,58 +3049,97 @@
        "      <th>score</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
+       "      <th>blurb</th>\n",
+       "      <th>image</th>\n",
+       "      <th>bullets</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
+       "      <th>59</th>\n",
        "      <td>Miami, Florida</td>\n",
        "      <td>46.752732</td>\n",
        "      <td>25.774173</td>\n",
        "      <td>-80.193620</td>\n",
+       "      <td>Miami is a bustling coastal city known for its...</td>\n",
+       "      <td>https://blog.viajemos.com/wp-content/uploads/2...</td>\n",
+       "      <td>[ \"Beaches and nightlife.\", \"Diverse cultural ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>85</th>\n",
+       "      <th>6</th>\n",
        "      <td>Austin, Texas</td>\n",
        "      <td>44.748798</td>\n",
        "      <td>30.271129</td>\n",
        "      <td>-97.743700</td>\n",
+       "      <td>Austin is a vibrant city known for its live mu...</td>\n",
+       "      <td>https://www.redfin.com/blog/wp-content/uploads...</td>\n",
+       "      <td>[\"Live Music Capital of the World.\", \"Thriving...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40</th>\n",
+       "      <th>64</th>\n",
        "      <td>New Orleans, Louisiana</td>\n",
        "      <td>44.550337</td>\n",
        "      <td>29.975998</td>\n",
        "      <td>-90.078213</td>\n",
+       "      <td>New Orleans is a city like no other, known for...</td>\n",
+       "      <td>https://content.r9cdn.net/rimg/dimg/6e/52/9f9e...</td>\n",
+       "      <td>[\"Vibrant jazz and food culture.\", \"Historic n...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
+       "      <th>92</th>\n",
        "      <td>Tallahassee, Florida</td>\n",
        "      <td>44.044434</td>\n",
        "      <td>30.438083</td>\n",
        "      <td>-84.280933</td>\n",
+       "      <td>Tallahassee, Florida’s capital, combines South...</td>\n",
+       "      <td>https://www.worldatlas.com/upload/7e/e9/b1/shu...</td>\n",
+       "      <td>\"Lively college-town vibe.\", \"Affordable livin...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86</th>\n",
+       "      <th>26</th>\n",
        "      <td>Dallas, Texas</td>\n",
        "      <td>43.158885</td>\n",
        "      <td>32.776272</td>\n",
        "      <td>-96.796856</td>\n",
+       "      <td>Dallas is a dynamic, sprawling city with a boo...</td>\n",
+       "      <td>https://images.surferseo.art/fc828a2c-43cb-4e1...</td>\n",
+       "      <td>[\"Thriving job market.\", \"Cultural diversity.\"...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                City_State      score   Latitude  Longitude\n",
-       "21          Miami, Florida  46.752732  25.774173 -80.193620\n",
-       "85           Austin, Texas  44.748798  30.271129 -97.743700\n",
-       "40  New Orleans, Louisiana  44.550337  29.975998 -90.078213\n",
-       "23    Tallahassee, Florida  44.044434  30.438083 -84.280933\n",
-       "86           Dallas, Texas  43.158885  32.776272 -96.796856"
+       "                City_State      score   Latitude  Longitude  \\\n",
+       "59          Miami, Florida  46.752732  25.774173 -80.193620   \n",
+       "6            Austin, Texas  44.748798  30.271129 -97.743700   \n",
+       "64  New Orleans, Louisiana  44.550337  29.975998 -90.078213   \n",
+       "92    Tallahassee, Florida  44.044434  30.438083 -84.280933   \n",
+       "26           Dallas, Texas  43.158885  32.776272 -96.796856   \n",
+       "\n",
+       "                                                blurb  \\\n",
+       "59  Miami is a bustling coastal city known for its...   \n",
+       "6   Austin is a vibrant city known for its live mu...   \n",
+       "64  New Orleans is a city like no other, known for...   \n",
+       "92  Tallahassee, Florida’s capital, combines South...   \n",
+       "26  Dallas is a dynamic, sprawling city with a boo...   \n",
+       "\n",
+       "                                                image  \\\n",
+       "59  https://blog.viajemos.com/wp-content/uploads/2...   \n",
+       "6   https://www.redfin.com/blog/wp-content/uploads...   \n",
+       "64  https://content.r9cdn.net/rimg/dimg/6e/52/9f9e...   \n",
+       "92  https://www.worldatlas.com/upload/7e/e9/b1/shu...   \n",
+       "26  https://images.surferseo.art/fc828a2c-43cb-4e1...   \n",
+       "\n",
+       "                                              bullets  \n",
+       "59  [ \"Beaches and nightlife.\", \"Diverse cultural ...  \n",
+       "6   [\"Live Music Capital of the World.\", \"Thriving...  \n",
+       "64  [\"Vibrant jazz and food culture.\", \"Historic n...  \n",
+       "92  \"Lively college-town vibe.\", \"Affordable livin...  \n",
+       "26  [\"Thriving job market.\", \"Cultural diversity.\"...  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
