--- a/datasets/testing.ipynb
+++ b/datasets/testing.ipynb
@@ -2929,7 +2929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3021,7 +3021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -3081,7 +3081,7 @@
        "      <td>44.550337</td>\n",
        "      <td>29.975998</td>\n",
        "      <td>-90.078213</td>\n",
-       "      <td>New Orleans is a city like no other, known for...</td>\n",
+       "      <td>New Haven offers a blend of history, academic ...</td>\n",
        "      <td>https://content.r9cdn.net/rimg/dimg/6e/52/9f9e...</td>\n",
        "      <td>[\"Vibrant jazz and food culture.\", \"Historic n...</td>\n",
        "    </tr>\n",
@@ -3120,7 +3120,7 @@
        "                                                blurb  \\\n",
        "59  Miami is a bustling coastal city known for its...   \n",
        "6   Austin is a vibrant city known for its live mu...   \n",
-       "64  New Orleans is a city like no other, known for...   \n",
+       "64  New Haven offers a blend of history, academic ...   \n",
        "92  Tallahassee, Florida’s capital, combines South...   \n",
        "26  Dallas is a dynamic, sprawling city with a boo...   \n",
        "\n",
@@ -3139,7 +3139,7 @@
        "26  [\"Thriving job market.\", \"Cultural diversity.\"...  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
