--- a/datasets/testing.ipynb
+++ b/datasets/testing.ipynb
@@ -3150,6 +3150,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Great nightlife', 'Diverse dining', 'Public transportation']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import ast\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Example dataset\n",
+    "data = pd.DataFrame({\n",
+    "    \"City_State\": [\"New York\", \"Chicago\", \"San Francisco\"],\n",
+    "    \"bullets\": [\n",
+    "        \"['Great nightlife', 'Diverse dining', 'Public transportation']\",\n",
+    "        \"['Beautiful parks', 'Lower rent', 'Family-friendly']\",\n",
+    "        \"['Tech opportunities', 'Access to nature', 'Progressive community']\"\n",
+    "    ]\n",
+    "})\n",
+    "\n",
+    "# Convert the \"bullets\" column from strings to actual Python lists\n",
+    "data['bullets'] = data['bullets'].apply(lambda x: ast.literal_eval(x) if isinstance(x, str) else x)\n",
+    "\n",
+    "# Check the output\n",
+    "print(data['bullets'].iloc[0])  # Output: ['Great nightlife', 'Diverse dining', 'Public transportation']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
